--- a/manual/emacspeak_002dsounds.html
+++ b/manual/emacspeak_002dsounds.html
@@ -161,9 +161,8 @@ Optional interactive PREFIX arg toggles global value.
       <p>Function that plays auditory icons. play : Launches
       play-program to play. Serve: Send a command to the
       speech-server to play. Queue : Add auditory icon to speech
-      queue. soxplay: Use sox to apply effect earwax for
-      headphones. Native : Use Emacs’ builtin sound support. Use
-      Serve when working with remote speech servers.</p>
+      queue. Native : Use Emacs’ builtin sound support. Use Serve
+      when working with remote speech servers.</p>
     </dd>
   </dl>
   <dl>
@@ -177,7 +176,7 @@ Optional interactive PREFIX arg toggles global value.
     <dt id="index-User-Option-705">Variable: <strong>User
     Option</strong> <em>emacspeak-play-program</em></dt>
     <dd>
-      <p>Name of executable that plays sound files.</p>
+      <p>Executable that plays sound files.</p>
     </dd>
   </dl>
   <dl>
