--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -2227,9 +2227,27 @@ Optional second arg ‘set’ sets the TZ environment variable as well.
 </pre>
       </div>
     </dd>
+  </dl><span id="emacspeak_002dtoggle_002daction_002dmode"></span>
+  <h4 class="subsubsection">12.173.1.100
+  emacspeak-toggle-action-mode</h4>
+  <dl>
+    <dt id="index-emacspeak_002dtoggle_002daction_002dmode">
+    Command: <strong>emacspeak-toggle-action-mode</strong>
+    <em>(&amp;optional prefix)</em></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dtoggle_002daction_002dmode-1"></span>
+      <div class="format">
+        <pre class=
+        "format">Toggle state of  Emacspeak  action mode.
+Interactive PREFIX arg means toggle  the global default value, and then set the
+current local  value to the result.
+</pre>
+      </div>
+    </dd>
   </dl><span id=
   "emacspeak_002dtoggle_002daudio_002dindentation"></span>
-  <h4 class="subsubsection">12.173.1.100
+  <h4 class="subsubsection">12.173.1.101
   emacspeak-toggle-audio-indentation</h4>
   <dl>
     <dt id=
@@ -2258,7 +2276,7 @@ results in the number of initial spaces being spoken.
     </dd>
   </dl><span id=
   "emacspeak_002dtoggle_002dcharacter_002decho"></span>
-  <h4 class="subsubsection">12.173.1.101
+  <h4 class="subsubsection">12.173.1.102
   emacspeak-toggle-character-echo</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dcharacter_002decho-1">
@@ -2281,7 +2299,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002dheader_002dline"></span>
-  <h4 class="subsubsection">12.173.1.102
+  <h4 class="subsubsection">12.173.1.103
   emacspeak-toggle-header-line</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dheader_002dline">
@@ -2295,7 +2313,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002dline_002decho"></span>
-  <h4 class="subsubsection">12.173.1.103
+  <h4 class="subsubsection">12.173.1.104
   emacspeak-toggle-line-echo</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dline_002decho-1">
@@ -2317,7 +2335,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002dmail_002dalert"></span>
-  <h4 class="subsubsection">12.173.1.104
+  <h4 class="subsubsection">12.173.1.105
   emacspeak-toggle-mail-alert</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dmail_002dalert">Command:
@@ -2341,7 +2359,7 @@ indicating the arrival  of new mail when displaying the mode line.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002dshow_002dpoint"></span>
-  <h4 class="subsubsection">12.173.1.105
+  <h4 class="subsubsection">12.173.1.106
   emacspeak-toggle-show-point</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dshow_002dpoint">Command:
@@ -2364,7 +2382,7 @@ current local  value to the result.
     </dd>
   </dl><span id=
   "emacspeak_002dtoggle_002dspeak_002dline_002dinvert_002dfilter"></span>
-  <h4 class="subsubsection">12.173.1.106
+  <h4 class="subsubsection">12.173.1.107
   emacspeak-toggle-speak-line-invert-filter</h4>
   <dl>
     <dt id=
@@ -2390,7 +2408,7 @@ current local  value to the result.
     </dd>
   </dl><span id=
   "emacspeak_002dtoggle_002dspeak_002dmessages"></span>
-  <h4 class="subsubsection">12.173.1.107
+  <h4 class="subsubsection">12.173.1.108
   emacspeak-toggle-speak-messages</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dspeak_002dmessages">
@@ -2411,7 +2429,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002dword_002decho"></span>
-  <h4 class="subsubsection">12.173.1.108
+  <h4 class="subsubsection">12.173.1.109
   emacspeak-toggle-word-echo</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dword_002decho-1">
@@ -2433,7 +2451,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dview_002dnotifications"></span>
-  <h4 class="subsubsection">12.173.1.109
+  <h4 class="subsubsection">12.173.1.110
   emacspeak-view-notifications</h4>
   <dl>
     <dt id="index-emacspeak_002dview_002dnotifications">Command:
@@ -2454,7 +2472,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dvoiceify_002drectangle"></span>
-  <h4 class="subsubsection">12.173.1.110
+  <h4 class="subsubsection">12.173.1.111
   emacspeak-voiceify-rectangle</h4>
   <dl>
     <dt id="index-emacspeak_002dvoiceify_002drectangle">Command:
@@ -2474,7 +2492,7 @@ Prompts for PERSONALITY  with completion when called interactively.
       </div>
     </dd>
   </dl><span id="emacspeak_002dvoiceify_002dregion"></span>
-  <h4 class="subsubsection">12.173.1.111
+  <h4 class="subsubsection">12.173.1.112
   emacspeak-voiceify-region</h4>
   <dl>
     <dt id="index-emacspeak_002dvoiceify_002dregion">Command:
@@ -2493,7 +2511,7 @@ Prompts for PERSONALITY  with completion when called interactively.
       </div>
     </dd>
   </dl><span id="emacspeak_002dzap_002dtts"></span>
-  <h4 class="subsubsection">12.173.1.112 emacspeak-zap-tts</h4>
+  <h4 class="subsubsection">12.173.1.113 emacspeak-zap-tts</h4>
   <dl>
     <dt id="index-emacspeak_002dzap_002dtts">Command:
     <strong>emacspeak-zap-tts</strong></dt>
