--- a/manual/URL-Templates.html
+++ b/manual/URL-Templates.html
@@ -177,8 +177,8 @@
       <p>Dictionary Lookup</p>
     </li>
     <li>
-      <b>Finance Google Search</b>
-      <p>Display content from Google Finance.</p>
+      <b>Finance Summary From Google</b>
+      <p>Display top stocks from Google Finance.</p>
     </li>
     <li>
       <b>FreeSound</b>
