--- a/manual/index.html
+++ b/manual/index.html
@@ -53,7 +53,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on October 17,
+  Desktop</strong> and was last updated on October 18,
   2020.</p><span id="SEC_Overview"></span>
   <h2 class="shortcontents-heading">Short Table of Contents</h2>
   <div class="shortcontents">
@@ -3872,17 +3872,25 @@
                   12.74.8.58
                   emacspeak-eww-table-speak-cell</a></li>
                   <li><a id=
+                  "toc-emacspeak_002deww_002dtable_002dspeak_002ddimensions"
+                  href=
+                  "emacspeak_002deww.html#emacspeak_002deww_002dtable_002dspeak_002ddimensions"
+                  name=
+                  "toc-emacspeak_002deww_002dtable_002dspeak_002ddimensions">
+                  12.74.8.59
+                  emacspeak-eww-table-speak-dimensions</a></li>
+                  <li><a id=
                   "toc-emacspeak_002deww_002dtags_002dat_002dpoint"
                   href=
                   "emacspeak_002deww.html#emacspeak_002deww_002dtags_002dat_002dpoint"
                   name=
                   "toc-emacspeak_002deww_002dtags_002dat_002dpoint">
-                  12.74.8.59 emacspeak-eww-tags-at-point</a></li>
+                  12.74.8.60 emacspeak-eww-tags-at-point</a></li>
                   <li><a id=
                   "toc-emacspeak_002deww_002dupdate_002dtitle"
                   href="emacspeak_002deww.html#emacspeak_002deww_002dupdate_002dtitle"
                   name=
-                  "toc-emacspeak_002deww_002dupdate_002dtitle">12.74.8.60
+                  "toc-emacspeak_002deww_002dupdate_002dtitle">12.74.8.61
                   emacspeak-eww-update-title</a></li>
                 </ul>
               </li>
