--- a/manual/emacspeak_002deww.html
+++ b/manual/emacspeak_002deww.html
@@ -1588,9 +1588,24 @@ Otherwise, prompts if content at point is enclosed by multiple elements.
 </pre>
       </div>
     </dd>
+  </dl><span id="emacspeak_002deww_002dtable_002ddata"></span>
+  <h4 class="subsubsection">12.74.9.58
+  emacspeak-eww-table-data</h4>
+  <dl>
+    <dt id="index-emacspeak_002deww_002dtable_002ddata">Command:
+    <strong>emacspeak-eww-table-data</strong></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002deww_002dtable_002ddata-1"></span>
+      <div class="format">
+        <pre class=
+        "format">View  table at point as a data table using Emacspeak Table UI.
+</pre>
+      </div>
+    </dd>
   </dl><span id=
   "emacspeak_002deww_002dtable_002dnext_002dcell"></span>
-  <h4 class="subsubsection">12.74.9.58
+  <h4 class="subsubsection">12.74.9.59
   emacspeak-eww-table-next-cell</h4>
   <dl>
     <dt id="index-emacspeak_002deww_002dtable_002dnext_002dcell">
@@ -1610,7 +1625,7 @@ Interactive prefix arg moves to the last cell in the table.
     </dd>
   </dl><span id=
   "emacspeak_002deww_002dtable_002dnext_002drow"></span>
-  <h4 class="subsubsection">12.74.9.59
+  <h4 class="subsubsection">12.74.9.60
   emacspeak-eww-table-next-row</h4>
   <dl>
     <dt id="index-emacspeak_002deww_002dtable_002dnext_002drow">
@@ -1629,7 +1644,7 @@ Interactive prefix arg moves to the last cell in the table.
     </dd>
   </dl><span id=
   "emacspeak_002deww_002dtable_002dprevious_002dcell"></span>
-  <h4 class="subsubsection">12.74.9.60
+  <h4 class="subsubsection">12.74.9.61
   emacspeak-eww-table-previous-cell</h4>
   <dl>
     <dt id=
@@ -1650,7 +1665,7 @@ With interactive prefix arg, move to the start of the table.
     </dd>
   </dl><span id=
   "emacspeak_002deww_002dtable_002dprevious_002drow"></span>
-  <h4 class="subsubsection">12.74.9.61
+  <h4 class="subsubsection">12.74.9.62
   emacspeak-eww-table-previous-row</h4>
   <dl>
     <dt id=
@@ -1671,7 +1686,7 @@ With interactive prefix arg, move to the start of the table.
     </dd>
   </dl><span id=
   "emacspeak_002deww_002dtable_002dspeak_002dcell"></span>
-  <h4 class="subsubsection">12.74.9.62
+  <h4 class="subsubsection">12.74.9.63
   emacspeak-eww-table-speak-cell</h4>
   <dl>
     <dt id="index-emacspeak_002deww_002dtable_002dspeak_002dcell">
@@ -1686,7 +1701,7 @@ With interactive prefix arg, move to the start of the table.
     </dd>
   </dl><span id=
   "emacspeak_002deww_002dtable_002dspeak_002ddimensions"></span>
-  <h4 class="subsubsection">12.74.9.63
+  <h4 class="subsubsection">12.74.9.64
   emacspeak-eww-table-speak-dimensions</h4>
   <dl>
     <dt id=
@@ -1704,7 +1719,7 @@ With interactive prefix arg, move to the start of the table.
     </dd>
   </dl><span id=
   "emacspeak_002deww_002dtags_002dat_002dpoint"></span>
-  <h4 class="subsubsection">12.74.9.64
+  <h4 class="subsubsection">12.74.9.65
   emacspeak-eww-tags-at-point</h4>
   <dl>
     <dt id="index-emacspeak_002deww_002dtags_002dat_002dpoint">
@@ -1718,7 +1733,7 @@ With interactive prefix arg, move to the start of the table.
       </div>
     </dd>
   </dl><span id="emacspeak_002deww_002dupdate_002dtitle"></span>
-  <h4 class="subsubsection">12.74.9.65
+  <h4 class="subsubsection">12.74.9.66
   emacspeak-eww-update-title</h4>
   <dl>
     <dt id="index-emacspeak_002deww_002dupdate_002dtitle">Command:
