--- a/manual/index.html
+++ b/manual/index.html
@@ -53,7 +53,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on October 20,
+  Desktop</strong> and was last updated on October 22,
   2020.</p><span id="SEC_Overview"></span>
   <h2 class="shortcontents-heading">Short Table of Contents</h2>
   <div class="shortcontents">
@@ -3871,26 +3871,32 @@
                   12.74.9.57
                   emacspeak-eww-speak-this-element</a></li>
                   <li><a id=
+                  "toc-emacspeak_002deww_002dtable_002ddata" href=
+                  "emacspeak_002deww.html#emacspeak_002deww_002dtable_002ddata"
+                  name=
+                  "toc-emacspeak_002deww_002dtable_002ddata">12.74.9.58
+                  emacspeak-eww-table-data</a></li>
+                  <li><a id=
                   "toc-emacspeak_002deww_002dtable_002dnext_002dcell"
                   href=
                   "emacspeak_002deww.html#emacspeak_002deww_002dtable_002dnext_002dcell"
                   name=
                   "toc-emacspeak_002deww_002dtable_002dnext_002dcell">
-                  12.74.9.58 emacspeak-eww-table-next-cell</a></li>
+                  12.74.9.59 emacspeak-eww-table-next-cell</a></li>
                   <li><a id=
                   "toc-emacspeak_002deww_002dtable_002dnext_002drow"
                   href=
                   "emacspeak_002deww.html#emacspeak_002deww_002dtable_002dnext_002drow"
                   name=
                   "toc-emacspeak_002deww_002dtable_002dnext_002drow">
-                  12.74.9.59 emacspeak-eww-table-next-row</a></li>
+                  12.74.9.60 emacspeak-eww-table-next-row</a></li>
                   <li><a id=
                   "toc-emacspeak_002deww_002dtable_002dprevious_002dcell"
                   href=
                   "emacspeak_002deww.html#emacspeak_002deww_002dtable_002dprevious_002dcell"
                   name=
                   "toc-emacspeak_002deww_002dtable_002dprevious_002dcell">
-                  12.74.9.60
+                  12.74.9.61
                   emacspeak-eww-table-previous-cell</a></li>
                   <li><a id=
                   "toc-emacspeak_002deww_002dtable_002dprevious_002drow"
@@ -3898,7 +3904,7 @@
                   "emacspeak_002deww.html#emacspeak_002deww_002dtable_002dprevious_002drow"
                   name=
                   "toc-emacspeak_002deww_002dtable_002dprevious_002drow">
-                  12.74.9.61
+                  12.74.9.62
                   emacspeak-eww-table-previous-row</a></li>
                   <li><a id=
                   "toc-emacspeak_002deww_002dtable_002dspeak_002dcell"
@@ -3906,7 +3912,7 @@
                   "emacspeak_002deww.html#emacspeak_002deww_002dtable_002dspeak_002dcell"
                   name=
                   "toc-emacspeak_002deww_002dtable_002dspeak_002dcell">
-                  12.74.9.62
+                  12.74.9.63
                   emacspeak-eww-table-speak-cell</a></li>
                   <li><a id=
                   "toc-emacspeak_002deww_002dtable_002dspeak_002ddimensions"
@@ -3914,7 +3920,7 @@
                   "emacspeak_002deww.html#emacspeak_002deww_002dtable_002dspeak_002ddimensions"
                   name=
                   "toc-emacspeak_002deww_002dtable_002dspeak_002ddimensions">
-                  12.74.9.63
+                  12.74.9.64
                   emacspeak-eww-table-speak-dimensions</a></li>
                   <li><a id=
                   "toc-emacspeak_002deww_002dtags_002dat_002dpoint"
@@ -3922,12 +3928,12 @@
                   "emacspeak_002deww.html#emacspeak_002deww_002dtags_002dat_002dpoint"
                   name=
                   "toc-emacspeak_002deww_002dtags_002dat_002dpoint">
-                  12.74.9.64 emacspeak-eww-tags-at-point</a></li>
+                  12.74.9.65 emacspeak-eww-tags-at-point</a></li>
                   <li><a id=
                   "toc-emacspeak_002deww_002dupdate_002dtitle"
                   href="emacspeak_002deww.html#emacspeak_002deww_002dupdate_002dtitle"
                   name=
-                  "toc-emacspeak_002deww_002dupdate_002dtitle">12.74.9.65
+                  "toc-emacspeak_002deww_002dupdate_002dtitle">12.74.9.66
                   emacspeak-eww-update-title</a></li>
                 </ul>
               </li>
