--- a/etc/tables/data-table.html
+++ b/etc/tables/data-table.html
@@ -1,7 +1,14 @@
 <table>
+  <thead>
+    <tr>
+      <th>first</th> <th>second</th><th>third</th>
+    </tr>
+  </thead>
+<tbody>
   <tr>
   <td>1</td> <td>2</td> <td>3</td></tr>
   <tr>
     <td>4</td> <td>5</td> <td>6</td>
   </tr>
+</tbody>
 </table>
