--- a/etc/tables/data-table.html
+++ b/etc/tables/data-table.html
@@ -1,14 +1,15 @@
+<html>
+  <head><title>Testing Data Tables</title></head>
+  <body>
 <table>
   <thead>
     <tr>
-      <th>first</th> <th>second</th><th>third</th>
+      <th>Column  A</th> <th>Column B</th><th>Column C</th>
     </tr>
   </thead>
 <tbody>
   <tr>
-  <td>1</td> <td>2</td> <td>3</td></tr>
-  <tr>
-    <td>4</td> <td>5</td> <td>6</td>
-  </tr>
+  <td>Cell 1</td> <td>Cell 2</td> <td>Cell 3</td></tr>
 </tbody>
 </table>
+</body></html>
