--- a/etc/tables/data-table.html
+++ b/etc/tables/data-table.html
@@ -1,6 +1,7 @@
 <html>
   <head><title>Testing Data Tables</title></head>
   <body>
+    <h2>Table With Header Row</h2>
 <table>
   <thead>
     <tr>
@@ -11,5 +12,15 @@
   <tr>
   <td>Cell 1</td> <td>Cell 2</td> <td>Cell 3</td></tr>
 </tbody>
+</table>
+<h2>Example With No Header Row</h2>
+
+<table>
+  
+    <tr>
+      <td>Column  A</td> <td>Column B</td><td>Column C</td>
+    </tr>
+  <tr>
+  <td>Cell 1</td> <td>Cell 2</td> <td>Cell 3</td></tr>
 </table>
 </body></html>
