--- a/manual/emacspeak_002drelated.html
+++ b/manual/emacspeak_002drelated.html
@@ -23,8 +23,8 @@
   "Table of Contents" />
   <link href="Emacspeak-Commands-And-Options.html" rel="up" title=
   "Emacspeak Commands And Options" />
-  <link href="emacspeak_002dremote.html" rel="next" title=
-  "emacspeak-remote" />
+  <link href="emacspeak_002drg.html" rel="next" title=
+  "emacspeak-rg" />
   <link href="emacspeak_002dreftex.html" rel="prev" title=
   "emacspeak-reftex" />
   <style type="text/css">
@@ -53,8 +53,8 @@
 <body lang="en" xml:lang="en">
   <span id="emacspeak_002drelated"></span>
   <div class="header">
-    <p>Next: <a href="emacspeak_002dremote.html" accesskey="n" rel=
-    "next">emacspeak-remote</a>, Previous: <a href=
+    <p>Next: <a href="emacspeak_002drg.html" accesskey="n" rel=
+    "next">emacspeak-rg</a>, Previous: <a href=
     "emacspeak_002dreftex.html" accesskey="p" rel=
     "prev">emacspeak-reftex</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
