--- a/manual/emacspeak_002drg.html
+++ b/manual/emacspeak_002drg.html
@@ -25,8 +25,8 @@
   "Emacspeak Commands And Options" />
   <link href="emacspeak_002drmail.html" rel="next" title=
   "emacspeak-rmail" />
-  <link href="emacspeak_002dremote.html" rel="prev" title=
-  "emacspeak-remote" />
+  <link href="emacspeak_002drelated.html" rel="prev" title=
+  "emacspeak-related" />
   <style type="text/css">
   /*<![CDATA[*/
   <!--
@@ -55,8 +55,8 @@
   <div class="header">
     <p>Next: <a href="emacspeak_002drmail.html" accesskey="n" rel=
     "next">emacspeak-rmail</a>, Previous: <a href=
-    "emacspeak_002dremote.html" accesskey="p" rel=
-    "prev">emacspeak-remote</a>, Up: <a href=
+    "emacspeak_002drelated.html" accesskey="p" rel=
+    "prev">emacspeak-related</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
     "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
     "index.html#SEC_Contents" title="Table of contents" rel=
@@ -65,7 +65,7 @@
   </div>
   <hr />
   <span id="emacspeak_002drg-1"></span>
-  <h3 class="section">12.155 emacspeak-rg</h3>
+  <h3 class="section">12.154 emacspeak-rg</h3>
   <p>RG == Emacs front-end to ripgrep (rg).</p>
 </body>
 </html>
